--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -59,5 +59,96 @@
 		"title": "Documentation",
 		"installation": "Installation Guide",
 		"api": "API Reference"
+	},
+	"group": {
+		"address": {
+			"title": "📍 Address (Option 1)",
+			"description": "Specify the address directly in naddr format"
+		},
+		"components": {
+			"title": "🔧 Components (Option 2)",
+			"description": "Specify user, id, and kind separately (all three required)"
+		},
+		"other": {
+			"title": "⚙️ Other Settings",
+			"description": "Settings for display and links"
+		}
+	},
+	"playground": {
+		"title": "{target} Interactive Playground",
+		"description": "Change the properties to preview the appearance",
+		"usageLabel": "📝 Usage:",
+		"propSettings": "Property Settings",
+		"preview": "Preview",
+		"generatedCode": "Generated Code",
+		"copy": "Copy",
+		"naddr": {
+			"instructions": "📍 Specify either an address (naddr) or 🔧 individual components (user + kind + identifier)",
+			"groupTitles": {
+				"address": "📍 Address (Option 1)",
+				"components": "🔧 Components (Option 2)",
+				"other": "⚙️ Other Settings"
+			},
+			"groupDescriptions": {
+				"address": "Directly specify the address in naddr format",
+				"components": "Individually specify user, kind, and identifier (user and kind are required)",
+				"other": "Display and link-related settings"
+			}
+		}
+	},
+	"props": {
+		"id": {
+			"placeholder": "nevent1...",
+			"help": "The ID of the Nostr event to display (required)\nExample: note1..., nevent1..."
+		},
+		"user": {
+			"type": "text",
+			"placeholder": "npub1...",
+			"help": "The user's ID or nip05 address to display (required)\nExample: note1..., nevent1..., or xx@xx.xx"
+		},
+		"naddr": {
+			"placeholder": "naddr1...",
+			"help": "Specify the Nostr address in naddr format to display\nExample: naddr1..."
+		},
+		"kind": {
+			"placeholder": "30001",
+			"help": "The kind of the event to display (required)\nExample: 30001, 30003, etc."
+		},
+		"identifier": {
+			"placeholder": "mynote",
+			"help": "Specify the event's identifier (optional)"
+		},
+		"relays": {
+			"placeholder": "wss://relay1.com,wss://relay2.com",
+			"help": "List of relay URLs used for fetching (optional)"
+		},
+		"href": {
+			"placeholder": "https://example.com",
+			"help": "The URL of the event link.\nIf omitted, it will be generated automatically"
+		},
+		"target": {
+			"help": "Specifies the target attribute of the link\nExample: \"_blank\""
+		},
+		"noLink": {
+			"label": "Disable Link (noLink)",
+			"help": "If true, disables link rendering"
+		},
+		"theme": {
+			"help": "Specifies the display theme:\n- auto (default): Follows system settings\n- dark: Display in dark mode\n- light: Display in light mode"
+		},
+		"height": {
+			"placeholder": "400px",
+			"help": "Display area height (optional)"
+		},
+		"display": {
+			"help": "Select display style:\n- card (default): With line breaks for readability\n- compact: Single-line compact style"
+		},
+		"sortOrder": {
+			"help": "Select the order of events:\n- normal (default): Standard order\n- reverse: Reverse order"
+		},
+		"itemsPerPage": {
+			"placeholder": "3",
+			"help": "Number of items to display per page (optional)"
+		}
 	}
 }
