--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -75,6 +75,7 @@
 		}
 	},
 	"playground": {
+		"refreshPreview": "Refresh",
 		"title": "{target} Interactive Playground",
 		"description": "Change the properties to preview the appearance",
 		"usageLabel": "📝 Usage:",
