--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -1,5 +1,5 @@
 {
-	"title": "@konemono Nostr Web Components",
+	"title": "Nostr Web Components @konemono",
 	"description": "Nostr プロトコルを簡単にWebアプリケーションに統合するためのコンポーネントライブラリ",
 	"components": {
 		"note": {
