--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -36,6 +36,9 @@
 		},
 		"naddr": {
 			"title": "Naddr Display"
+		},
+		"stream": {
+			"title": "Live Event Stream"
 		}
 	},
 	"installation": {
